--- a/manifest.json
+++ b/manifest.json
@@ -11,17 +11,23 @@
         "48": "image/48px-Japanese_Hiragana_kyokashotai_A.svg.png",
         "128": "image/128px-Japanese_Hiragana_kyokashotai_A.svg.png"
     },
-    "browser_action": {
-        "default_icon": {
-            "19": "image/19px-Japanese_Hiragana_kyokashotai_A.svg.png",
-            "38": "image/38px-Japanese_Hiragana_kyokashotai_A.svg.png"
-        },
-        "default_popup": "popup/popup.html"
-    },
+    // "browser_action": {
+    //     "default_icon": {
+    //         "19": "image/19px-Japanese_Hiragana_kyokashotai_A.svg.png",
+    //         "38": "image/38px-Japanese_Hiragana_kyokashotai_A.svg.png"
+    //     },
+    //     "default_popup": "popup/popup.html"
+    // },
     "content_scripts": [
         {
             "matches": ["http://fx.dmm.com/*"],
-            "js": ["js/chrome-wrapper.js", "content/dmm/content.js"]
+            "js": [
+                "external/underscore-min.js",
+                "external/jquery-2.1.3.min.js",
+                "js/chrome-wrapper.js",
+                "js/constants.js",
+                "content/dmm/content.js"
+            ]
         }
     ],
     "background": {
