--- a/manifest.json
+++ b/manifest.json
@@ -22,8 +22,7 @@
         {
             "matches": ["http://fx.dmm.com/*"],
             "js": [
-                "external/underscore-min.js",
-                "external/jquery-2.1.3.min.js",
+                "bower_composnents/jquery/dist/jquery.min.js",
                 "js/chrome-wrapper.js",
                 "js/constants.js",
                 "content/dmm/content.js"
@@ -34,5 +33,6 @@
         "page": "background/background.html",
         "persistent": true
     },
-    "options_page": "options/options.html"
+    "options_page": "options/index.html",
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
